--- a/操作图数据库neo4j/cypher/create_node.ipynb
+++ b/操作图数据库neo4j/cypher/create_node.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
     "    driver.execute_query(\"match (n) detach delete n\", database_='neo4j')  # 删除所有节点和关系\n",
     "\n",
     "    # 创建单个节点;标签名称:moive\n",
-    "    driver.execute_query(\"create(:moive{name:'肖申克的救赎', type:'犯罪', score:9.7})\", database_=\"neo4j\")\n",
+    "    driver.execute_query(\"create(a:moive{name:'肖申克的救赎', type:'犯罪', score:9.7}) return a\", database_=\"neo4j\")\n",
     "    # 创建多个标签:moive/good/USA\n",
     "    driver.execute_query(\"create(:moive:good:USA{name:'侏罗纪公园', type:'科幻', score:9.7})\", database_=\"neo4j\")\n",
     "    # 创建多个节点(逗号分隔)\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "outputs": [],
    "source": [],
    "metadata": {
