--- a/操作图数据库neo4j/cypher/create_relationship.ipynb
+++ b/操作图数据库neo4j/cypher/create_relationship.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -26,6 +26,14 @@
     "    # 创建节点与节点之间的系===>-[:love{level:'must', time:5}]->\n",
     "    driver.execute_query(\"create (:person{name:'xiaomai', age:4})-[:love{level:'must', time:5}]->(:moive{name:'西游记'})\", database_='neo4j')\n",
     "\n",
+    "    # 创建节点===>(xiaowang_:Person {name: 'xiaowang', bornIn: '湖南', age:34})\n",
+    "    # 创建节点===>(xiaoli_:Person {name: 'xiaoli', bornIn: '广东', age:41})\n",
+    "    # 创建节点与节点之间的系===>-[r:knows]->\n",
+    "    driver.execute_query(\"create \"\n",
+    "                         \"(xiaowang_:Person {name: 'xiaowang', bornIn: '湖南', age:34}),\"\n",
+    "                         \"(xiaoli_:Person {name: 'xiaoli', bornIn: '广东', age:41}),\"\n",
+    "                         \"(xiaowang_)-[r:knows]->(xiaoli_)\"\n",
+    "                         \"return r\", database_='neo4j')\n",
     "    driver.close()"
    ]
   }
