--- a/操作图数据库neo4j/cypher/match-result_node.ipynb
+++ b/操作图数据库neo4j/cypher/match-result_node.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "# 查询标签为moive、name为无间道的节点\n",
+    "# 查询标签为moive、name为无间道的节点;并返回该节点\n",
     "r0 = driver.execute_query(\"match(a:moive{name:'无间道'}) return a\", database_='neo4j').records\n",
     "for i in r0:\n",
     "    print(i.data())"
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "# 指定返回属性为name和score\n",
+    "# 指定返回查询结果的name和score属性\n",
     "r0 = driver.execute_query(\"match(a:moive) return a.name, a.score\", database_='neo4j').records\n",
     "for i in r0:\n",
     "    print(i.data())"
