--- a/操作图数据库neo4j/cypher/match-result_relationship.ipynb
+++ b/操作图数据库neo4j/cypher/match-result_relationship.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 99,
    "outputs": [
     {
      "data": {
-      "text/plain": "<neo4j._sync.driver.Neo4jDriver at 0x1e4e50edc60>"
+      "text/plain": "<neo4j._sync.driver.Neo4jDriver at 0x1e4e50ee230>"
      },
-     "execution_count": 90,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[], summary=<neo4j._work.summary.ResultSummary object at 0x000001E4E50EE140>, keys=[])"
+      "text/plain": "EagerResult(records=[], summary=<neo4j._work.summary.ResultSummary object at 0x000001E4E50EEC20>, keys=[])"
      },
-     "execution_count": 91,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,15 +72,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 101,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Record n=<Node element_id='3' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}> r=<Relationship element_id='0' nodes=(<Node element_id='3' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='4' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}> m=<Node element_id='4' labels=frozenset({'moive'}) properties={'name': '西游记'}>>, <Record n=<Node element_id='12' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}> r=<Relationship element_id='1' nodes=(<Node element_id='12' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='13' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}> m=<Node element_id='13' labels=frozenset({'moive'}) properties={'name': '西游记'}>>, <Record n=<Node element_id='20' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}> r=<Relationship element_id='7' nodes=(<Node element_id='20' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='21' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}> m=<Node element_id='21' labels=frozenset({'find'}) properties={'name': '狗粮'}>>]\n",
+      "[<Record n=<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}> r=<Relationship element_id='14' nodes=(<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}> m=<Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>>, <Record n=<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}> r=<Relationship element_id='15' nodes=(<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}> m=<Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>>, <Record n=<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}> r=<Relationship element_id='17' nodes=(<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}> m=<Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>>]\n",
       "{'n': {'name': 'dmm', 'age': 4}, 'r': ({'name': 'dmm', 'age': 4}, 'love', {'name': '西游记'}), 'm': {'name': '西游记'}}\n",
-      "[<Node element_id='3' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Relationship element_id='0' nodes=(<Node element_id='3' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='4' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}>, <Node element_id='4' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
+      "[<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Relationship element_id='14' nodes=(<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}>, <Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
       "<class 'neo4j.graph.Node'>\n",
       "frozenset({'person'})\n",
       "dict_items([('name', 'dmm'), ('age', 4)])\n",
@@ -88,7 +88,7 @@
       "love\n",
       "dict_items([])\n",
       "{'n': {'name': 'xiaomai', 'age': 4}, 'r': ({'name': 'xiaomai', 'age': 4}, 'love', {'name': '西游记'}), 'm': {'name': '西游记'}}\n",
-      "[<Node element_id='12' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Relationship element_id='1' nodes=(<Node element_id='12' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='13' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}>, <Node element_id='13' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
+      "[<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Relationship element_id='15' nodes=(<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}>, <Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
       "<class 'neo4j.graph.Node'>\n",
       "frozenset({'person'})\n",
       "dict_items([('name', 'xiaomai'), ('age', 4)])\n",
@@ -96,7 +96,7 @@
       "love\n",
       "dict_items([('level', 'must'), ('time', 5)])\n",
       "{'n': {'name': 'wangcai', 'age': 1}, 'r': ({'name': 'wangcai', 'age': 1}, 'love', {'name': '狗粮'}), 'm': {'name': '狗粮'}}\n",
-      "[<Node element_id='20' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Relationship element_id='7' nodes=(<Node element_id='20' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='21' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}>, <Node element_id='21' labels=frozenset({'find'}) properties={'name': '狗粮'}>]\n",
+      "[<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Relationship element_id='17' nodes=(<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}>, <Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>]\n",
       "<class 'neo4j.graph.Node'>\n",
       "frozenset({'dog'})\n",
       "dict_items([('name', 'wangcai'), ('age', 1)])\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "outputs": [
     {
      "name": "stdout",
@@ -159,20 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 103,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{'m': {'name': 'dmm', 'age': 4}}\n",
-      "{'m': {'name': 'xiaomai', 'age': 4}}\n",
-      "{'m': {'name': 'dmm', 'age': 4}}\n"
+      "{'m': {'name': 'dmm', 'age': 4}}\n",
+      "{'m': {'name': 'xiaomai', 'age': 4}}\n"
      ]
     }
    ],
    "source": [
     "# 关系为任意;开始节点类型为person,结尾节点为任意\n",
+    "# 只返回开始节点(m)\n",
     "r0 = driver.execute_query(\"match (m:person)-[r]->() return m\", database_='neo4j').records\n",
     "for i in r0:\n",
     "    print(i.data())"
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 104,
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +199,8 @@
    ],
    "source": [
     "# 关系为任意;开始节点类型name属性为xiaomai,结尾节点为任意\n",
-    "r0 = driver.execute_query(\"match (a:person{name:'xiaomai'})-[r]->(b) return a, b, r\", database_='neo4j').records\n",
+    "# 返回查询到的所有节点、关系\n",
+    "r0 = driver.execute_query(\"match (a:person{name:'xiaomai'})-[r]->(b) return *\", database_='neo4j').records\n",
     "for i in r0:\n",
     "    print(i.data())"
    ],
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 105,
    "outputs": [
     {
      "name": "stdout",
@@ -236,16 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 106,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'m': {'name': 'dmm', 'age': 4}, 'n': {'name': '西游记'}, 'r': ({'name': 'dmm', 'age': 4}, 'love', {'name': '西游记'})}\n",
-      "{'m': {'name': 'xiaomai', 'age': 4}, 'n': {'name': '西游记'}, 'r': ({'name': 'xiaomai', 'age': 4}, 'love', {'name': '西游记'})}\n",
       "{'m': {'name': 'dmm', 'age': 4}, 'n': {'name': '三国演义'}, 'r': ({'name': 'dmm', 'age': 4}, 'dislike', {'name': '三国演义'})}\n",
-      "{'m': {'name': 'wangcai', 'age': 1}, 'n': {'name': '狗粮'}, 'r': ({'name': 'wangcai', 'age': 1}, 'love', {'name': '狗粮'})}\n"
+      "{'m': {'name': 'dmm', 'age': 4}, 'n': {'name': '西游记'}, 'r': ({'name': 'dmm', 'age': 4}, 'love', {'name': '西游记'})}\n",
+      "{'m': {'name': 'wangcai', 'age': 1}, 'n': {'name': '狗粮'}, 'r': ({'name': 'wangcai', 'age': 1}, 'love', {'name': '狗粮'})}\n",
+      "{'m': {'name': 'xiaomai', 'age': 4}, 'n': {'name': '西游记'}, 'r': ({'name': 'xiaomai', 'age': 4}, 'love', {'name': '西游记'})}\n"
      ]
     }
    ],
