neo4j完成新的学习

--- a/操作图数据库neo4j/cypher/match-result_relationship.ipynb
+++ b/操作图数据库neo4j/cypher/match-result_relationship.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 108,
    "outputs": [
     {
      "data": {
-      "text/plain": "<neo4j._sync.driver.Neo4jDriver at 0x1e4e50ee230>"
+      "text/plain": "<neo4j._sync.driver.Neo4jDriver at 0x1e4e5110a30>"
      },
-     "execution_count": 99,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 109,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[], summary=<neo4j._work.summary.ResultSummary object at 0x000001E4E50EEC20>, keys=[])"
+      "text/plain": "EagerResult(records=[], summary=<neo4j._work.summary.ResultSummary object at 0x000001E4E50ECC10>, keys=[])"
      },
-     "execution_count": 100,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,15 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 110,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Record n=<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}> r=<Relationship element_id='14' nodes=(<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}> m=<Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>>, <Record n=<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}> r=<Relationship element_id='15' nodes=(<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}> m=<Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>>, <Record n=<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}> r=<Relationship element_id='17' nodes=(<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}> m=<Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>>]\n",
+      "[<Record n=<Node element_id='8' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}> r=<Relationship element_id='3' nodes=(<Node element_id='8' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='9' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}> m=<Node element_id='9' labels=frozenset({'find'}) properties={'name': '狗粮'}>>, <Record n=<Node element_id='6' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}> r=<Relationship element_id='10' nodes=(<Node element_id='6' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='20' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}> m=<Node element_id='20' labels=frozenset({'moive'}) properties={'name': '西游记'}>>, <Record n=<Node element_id='21' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}> r=<Relationship element_id='11' nodes=(<Node element_id='21' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='1' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}> m=<Node element_id='1' labels=frozenset({'moive'}) properties={'name': '西游记'}>>]\n",
+      "{'n': {'name': 'wangcai', 'age': 1}, 'r': ({'name': 'wangcai', 'age': 1}, 'love', {'name': '狗粮'}), 'm': {'name': '狗粮'}}\n",
+      "[<Node element_id='8' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Relationship element_id='3' nodes=(<Node element_id='8' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='9' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}>, <Node element_id='9' labels=frozenset({'find'}) properties={'name': '狗粮'}>]\n",
+      "<class 'neo4j.graph.Node'>\n",
+      "frozenset({'dog'})\n",
+      "dict_items([('name', 'wangcai'), ('age', 1)])\n",
+      "<class 'abc.love'>\n",
+      "love\n",
+      "dict_items([])\n",
       "{'n': {'name': 'dmm', 'age': 4}, 'r': ({'name': 'dmm', 'age': 4}, 'love', {'name': '西游记'}), 'm': {'name': '西游记'}}\n",
-      "[<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Relationship element_id='14' nodes=(<Node element_id='15' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}>, <Node element_id='22' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
+      "[<Node element_id='6' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Relationship element_id='10' nodes=(<Node element_id='6' labels=frozenset({'person'}) properties={'name': 'dmm', 'age': 4}>, <Node element_id='20' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={}>, <Node element_id='20' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
       "<class 'neo4j.graph.Node'>\n",
       "frozenset({'person'})\n",
       "dict_items([('name', 'dmm'), ('age', 4)])\n",
@@ -88,21 +96,13 @@
       "love\n",
       "dict_items([])\n",
       "{'n': {'name': 'xiaomai', 'age': 4}, 'r': ({'name': 'xiaomai', 'age': 4}, 'love', {'name': '西游记'}), 'm': {'name': '西游记'}}\n",
-      "[<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Relationship element_id='15' nodes=(<Node element_id='23' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}>, <Node element_id='24' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
+      "[<Node element_id='21' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Relationship element_id='11' nodes=(<Node element_id='21' labels=frozenset({'person'}) properties={'name': 'xiaomai', 'age': 4}>, <Node element_id='1' labels=frozenset({'moive'}) properties={'name': '西游记'}>) type='love' properties={'level': 'must', 'time': 5}>, <Node element_id='1' labels=frozenset({'moive'}) properties={'name': '西游记'}>]\n",
       "<class 'neo4j.graph.Node'>\n",
       "frozenset({'person'})\n",
       "dict_items([('name', 'xiaomai'), ('age', 4)])\n",
       "<class 'abc.love'>\n",
       "love\n",
-      "dict_items([('level', 'must'), ('time', 5)])\n",
-      "{'n': {'name': 'wangcai', 'age': 1}, 'r': ({'name': 'wangcai', 'age': 1}, 'love', {'name': '狗粮'}), 'm': {'name': '狗粮'}}\n",
-      "[<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Relationship element_id='17' nodes=(<Node element_id='16' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 1}>, <Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>) type='love' properties={}>, <Node element_id='17' labels=frozenset({'find'}) properties={'name': '狗粮'}>]\n",
-      "<class 'neo4j.graph.Node'>\n",
-      "frozenset({'dog'})\n",
-      "dict_items([('name', 'wangcai'), ('age', 1)])\n",
-      "<class 'abc.love'>\n",
-      "love\n",
-      "dict_items([])\n"
+      "dict_items([('level', 'must'), ('time', 5)])\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 111,
    "outputs": [
     {
      "name": "stdout",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 112,
    "outputs": [
     {
      "name": "stdout",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "outputs": [
     {
      "name": "stdout",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 114,
    "outputs": [
     {
      "name": "stdout",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 115,
    "outputs": [
     {
      "name": "stdout",
@@ -256,6 +256,20 @@
     "r0 = driver.execute_query(\"match (m)-[r]->(n) return m, n, r\", database_='neo4j').records\n",
     "for i in r0:\n",
     "    print(i.data())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "outputs": [],
+   "source": [
+    "driver.close()"
    ],
    "metadata": {
     "collapsed": false,
