--- a/操作图数据库neo4j/cypher/merge.ipynb
+++ b/操作图数据库neo4j/cypher/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 116,
    "outputs": [
     {
      "data": {
-      "text/plain": "<neo4j._sync.driver.Neo4jDriver at 0x212623d3a00>"
+      "text/plain": "<neo4j._sync.driver.Neo4jDriver at 0x2126241e440>"
      },
-     "execution_count": 106,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 117,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623DB520>, keys=[])"
+      "text/plain": "EagerResult(records=[], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623F5D80>, keys=[])"
      },
-     "execution_count": 107,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "driver.execute_query(\"match (n) detach delete n\", database_='neo4j')\n",
+    "driver.execute_query(\"match (n) detach delete n\", database_='neo4j') # 删除所有节点和关系\n",
     "\n",
     "cql_string = \"\"\"CREATE\n",
     "(xiaowang_:Person {name: 'xiaowang', bornIn: '湖南', age:34}),\n",
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 118,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='8' labels=frozenset({'dog'}) properties={'name': 'wangcai'}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623DAB60>, keys=['wangcai'])"
+      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='11' labels=frozenset({'dog'}) properties={'name': 'wangcai'}>>], summary=<neo4j._work.summary.ResultSummary object at 0x0000021262367970>, keys=['wangcai'])"
      },
-     "execution_count": 108,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 119,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='8' labels=frozenset({'dog'}) properties={'name': 'wangcai'}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623D11B0>, keys=['wangcai'])"
+      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='11' labels=frozenset({'dog'}) properties={'name': 'wangcai'}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623D8C10>, keys=['wangcai'])"
      },
-     "execution_count": 109,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,13 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 120,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='9' labels=frozenset({'dog'}) properties={'name': 'wangcai'}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623657B0>, keys=['wangcai'])"
+      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='12' labels=frozenset({'dog'}) properties={'name': 'wangcai'}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623F5E40>, keys=['wangcai'])"
      },
-     "execution_count": 110,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 121,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='15' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 3}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623F5D50>, keys=['wangcai'])"
+      "text/plain": "EagerResult(records=[<Record wangcai=<Node element_id='13' labels=frozenset({'dog'}) properties={'name': 'wangcai', 'age': 3}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623D8F70>, keys=['wangcai'])"
      },
-     "execution_count": 111,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 122,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[<Record xiaowang_=<Node element_id='22' labels=frozenset({'Person'}) properties={'bornIn': '湖南', 'name': 'xiaowang', 'age': 34}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623F7A60>, keys=['xiaowang_'])"
+      "text/plain": "EagerResult(records=[<Record xiaowang_=<Node element_id='15' labels=frozenset({'Person'}) properties={'bornIn': '湖南', 'name': 'xiaowang', 'age': 34}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623D8430>, keys=['xiaowang_'])"
      },
-     "execution_count": 112,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,13 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 123,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[<Record xiaowang_.name='xiaowang' hkdg.title='黑客帝国'>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623D3310>, keys=['xiaowang_.name', 'hkdg.title'])"
+      "text/plain": "EagerResult(records=[<Record xiaowang_.name='xiaowang' hkdg.title='黑客帝国'>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212622B0370>, keys=['xiaowang_.name', 'hkdg.title'])"
      },
-     "execution_count": 113,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,13 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 124,
    "outputs": [
     {
      "data": {
-      "text/plain": "EagerResult(records=[<Record r=<Relationship element_id='1' nodes=(<Node element_id='22' labels=frozenset() properties={}>, <Node element_id='4' labels=frozenset() properties={}>) type='knows' properties={}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623F7970>, keys=['r'])"
+      "text/plain": "EagerResult(records=[<Record r=<Relationship element_id='17' nodes=(<Node element_id='15' labels=frozenset() properties={}>, <Node element_id='23' labels=frozenset() properties={}>) type='knows' properties={}>>], summary=<neo4j._work.summary.ResultSummary object at 0x00000212623D31C0>, keys=['r'])"
      },
-     "execution_count": 114,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,9 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "outputs": [],
-   "source": [],
+   "source": [
+    "driver.close()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
