--- a/操作分布式搜索和分析引擎Elasticsearch/base写入数据/逐条写入.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base写入数据/逐条写入.ipynb
@@ -14,10 +14,18 @@
   {
    "cell_type": "code",
    "execution_count": 91,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
+      ]
      },
      "execution_count": 91,
      "metadata": {},
@@ -27,21 +35,30 @@
    "source": [
     "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])\n",
     "es.indices.create('es0')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': 'H_3wEoYBXaQAg-JsJ-dq',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 0,\n '_primary_term': 1}"
+      "text/plain": [
+       "{'_index': 'es0',\n",
+       " '_type': '_doc',\n",
+       " '_id': 'H_3wEoYBXaQAg-JsJ-dq',\n",
+       " '_version': 1,\n",
+       " 'result': 'created',\n",
+       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
+       " '_seq_no': 0,\n",
+       " '_primary_term': 1}"
+      ]
      },
      "execution_count": 92,
      "metadata": {},
@@ -77,21 +94,38 @@
     "             \"create_time\": \"2022-4-18 14:34:47\",\n",
     "             \"modify_time\": \"2022-4-18 14:34:52\"\n",
     "         })"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': 'H_3wEoYBXaQAg-JsJ-dq',\n '_version': 1,\n '_seq_no': 0,\n '_primary_term': 1,\n 'found': True,\n '_source': {'name': '赵敏',\n  'age': '16',\n  'sex': 'f',\n  'address': '大都',\n  'sect': '朝廷',\n  'skill': '无',\n  'power': '40',\n  'create_time': '2022-4-18 14:34:47',\n  'modify_time': '2022-4-18 14:34:52'}}"
+      "text/plain": [
+       "{'_index': 'es0',\n",
+       " '_type': '_doc',\n",
+       " '_id': 'H_3wEoYBXaQAg-JsJ-dq',\n",
+       " '_version': 1,\n",
+       " '_seq_no': 0,\n",
+       " '_primary_term': 1,\n",
+       " 'found': True,\n",
+       " '_source': {'name': '赵敏',\n",
+       "  'age': '16',\n",
+       "  'sex': 'f',\n",
+       "  'address': '大都',\n",
+       "  'sect': '朝廷',\n",
+       "  'skill': '无',\n",
+       "  'power': '40',\n",
+       "  'create_time': '2022-4-18 14:34:47',\n",
+       "  'modify_time': '2022-4-18 14:34:52'}}"
+      ]
      },
      "execution_count": 93,
      "metadata": {},
@@ -100,21 +134,30 @@
    ],
    "source": [
     "es.get(index='es0', id='H_3wEoYBXaQAg-JsJ-dq')"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 1,\n '_primary_term': 1}"
+      "text/plain": [
+       "{'_index': 'es0',\n",
+       " '_type': '_doc',\n",
+       " '_id': '0',\n",
+       " '_version': 1,\n",
+       " 'result': 'created',\n",
+       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
+       " '_seq_no': 1,\n",
+       " '_primary_term': 1}"
+      ]
      },
      "execution_count": 94,
      "metadata": {},
@@ -150,21 +193,38 @@
     "             \"create_time\": \"2022-4-18 14:44:47\",\n",
     "             \"modify_time\": \"2022-4-18 14:44:52\"\n",
     "         })"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '0',\n '_version': 1,\n '_seq_no': 1,\n '_primary_term': 1,\n 'found': True,\n '_source': {'name': '小昭',\n  'age': '15',\n  'sex': 'f',\n  'address': '中原',\n  'sect': '天鹰教',\n  'skill': '无',\n  'power': '50',\n  'create_time': '2022-4-18 14:44:47',\n  'modify_time': '2022-4-18 14:44:52'}}"
+      "text/plain": [
+       "{'_index': 'es0',\n",
+       " '_type': '_doc',\n",
+       " '_id': '0',\n",
+       " '_version': 1,\n",
+       " '_seq_no': 1,\n",
+       " '_primary_term': 1,\n",
+       " 'found': True,\n",
+       " '_source': {'name': '小昭',\n",
+       "  'age': '15',\n",
+       "  'sex': 'f',\n",
+       "  'address': '中原',\n",
+       "  'sect': '天鹰教',\n",
+       "  'skill': '无',\n",
+       "  'power': '50',\n",
+       "  'create_time': '2022-4-18 14:44:47',\n",
+       "  'modify_time': '2022-4-18 14:44:52'}}"
+      ]
      },
      "execution_count": 95,
      "metadata": {},
@@ -173,21 +233,23 @@
    ],
    "source": [
     "es.get(index='es0', id=0)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True}"
+      "text/plain": [
+       "{'acknowledged': True}"
+      ]
      },
      "execution_count": 96,
      "metadata": {},
@@ -196,25 +258,19 @@
    ],
    "source": [
     "es.indices.delete('es0')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -233,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
