--- a/setuptools_note/setuptools_base/atest/t0.ipynb
+++ b/setuptools_note/setuptools_base/atest/t0.ipynb
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "from mypackage.example_print import print_a_b\n",
+    "from mypackage.example_print import print_a_b  # mypackage包\n",
     "\n",
     "# test:ok\n",
     "print_a_b(\"hello\", \"dcdmm\")"
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "from mypackage.fish import *\n",
+    "from mypackage.fish import *  # mypackage包\n",
     "\n",
     "# test:ok\n",
     "\n",
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "from mypackage.mp0.custom_ao import c_add\n",
+    "from mypackage.mp0.custom_ao import c_add  # mypackage目录下的mp0包\n",
     "\n",
     "c_add(1, 2)"
    ]
@@ -268,15 +268,15 @@
      "evalue": "No module named 'mypackage.my1'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\duanm\\Music\\GitHubProjects\\PyDevelopment\\setuptools_note\\setuptools_base\\atest\\t0.ipynb 单元格 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/duanm/Music/GitHubProjects/PyDevelopment/setuptools_note/setuptools_base/atest/t0.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmypackage\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmy1\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcustom_ao\u001b[39;00m \u001b[39mimport\u001b[39;00m c_multi\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/duanm/Music/GitHubProjects/PyDevelopment/setuptools_note/setuptools_base/atest/t0.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m c_multi(\u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m)\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mypackage.my1'"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[1;32mc:\\Users\\duanm\\Music\\GitHubProjects\\PyDevelopment\\setuptools_note\\setuptools_base\\atest\\t0.ipynb 单元格 5\u001B[0m line \u001B[0;36m1\n\u001B[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/duanm/Music/GitHubProjects/PyDevelopment/setuptools_note/setuptools_base/atest/t0.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001B[0m \u001B[39mfrom\u001B[39;00m \u001B[39mmypackage\u001B[39;00m\u001B[39m.\u001B[39;00m\u001B[39mmy1\u001B[39;00m\u001B[39m.\u001B[39;00m\u001B[39mcustom_ao\u001B[39;00m \u001B[39mimport\u001B[39;00m c_multi\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/duanm/Music/GitHubProjects/PyDevelopment/setuptools_note/setuptools_base/atest/t0.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001B[0m c_multi(\u001B[39m2\u001B[39m, \u001B[39m3\u001B[39m)\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'mypackage.my1'"
      ]
     }
    ],
    "source": [
-    "from mypackage.my1.custom_ao import c_multi\n",
+    "from mypackage.my1.custom_ao import c_multi  # mypackage目录下的my1包未安装\n",
     "\n",
     "c_multi(2, 3)"
    ]
@@ -297,7 +297,7 @@
     }
    ],
    "source": [
-    "from mypackage1.hello import ph\n",
+    "from mypackage1.hello import ph  # mypackage1包\n",
     "\n",
     "ph()"
    ]
