进一步理解

--- a/setuptools_note/setuptools_base/atest/t0.ipynb
+++ b/setuptools_note/setuptools_base/atest/t0.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T06:43:51.947901Z",
-     "start_time": "2023-11-28T06:43:51.112567400Z"
-    },
-    "collapsed": false
+     "end_time": "2023-12-11T03:10:20.227924400Z",
+     "start_time": "2023-12-11T03:10:19.350643900Z"
+    }
    },
    "outputs": [
     {
@@ -77,7 +77,6 @@
       "MarkupSafe                2.1.1\n",
       "matplotlib-inline         0.1.6\n",
       "mistune                   0.8.4\n",
-      "mypackage                 0.0.1\n",
       "nb-conda-kernels          2.3.1\n",
       "nbclassic                 0.5.5\n",
       "nbclient                  0.5.13\n",
@@ -141,7 +140,8 @@
       "websocket-client          0.58.0\n",
       "Werkzeug                  2.3.6\n",
       "wheel                     0.38.4\n",
-      "widgetsnbextension        4.0.8\n"
+      "widgetsnbextension        4.0.8\n",
+      "xyzqwer                   0.0.1\n"
      ]
     }
    ],
@@ -151,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T06:43:51.963936100Z",
-     "start_time": "2023-11-28T06:43:51.947901Z"
+     "end_time": "2023-12-11T03:10:20.259325300Z",
+     "start_time": "2023-12-11T03:10:20.227924400Z"
     }
    },
    "outputs": [
@@ -177,11 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T06:43:51.995207300Z",
-     "start_time": "2023-11-28T06:43:51.963936100Z"
+     "end_time": "2023-12-11T03:10:20.259325300Z",
+     "start_time": "2023-12-11T03:10:20.244798700Z"
     }
    },
    "outputs": [
@@ -189,16 +189,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "鱼的位置是 7 1\n",
-      "🐟移动后的位置是 6 1\n",
-      "金鱼的位置是 9 3\n",
-      "🐟移动后的位置是 8 3\n",
+      "鱼的位置是 8 8\n",
+      "🐟移动后的位置是 7 8\n",
+      "金鱼的位置是 9 6\n",
+      "🐟移动后的位置是 8 6\n",
       "鲨鱼0,hangry? True\n",
-      "鲨鱼0: 2 10\n",
+      "鲨鱼0: 9 1\n",
       "鲨鱼1,hangry? True\n",
-      "鲨鱼1: 8 10\n",
+      "鲨鱼1: 7 3\n",
       "鲨鱼2,hangry? True\n",
-      "鲨鱼2: 9 0\n"
+      "鲨鱼2: 7 4\n"
      ]
     }
    ],
@@ -233,21 +233,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-28T06:43:51.995207300Z",
-     "start_time": "2023-11-28T06:43:51.979580400Z"
+     "end_time": "2023-12-11T03:10:20.330843800Z",
+     "start_time": "2023-12-11T03:10:20.260326600Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "3"
-      ]
+      "text/plain": "3"
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,8 +258,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T03:10:20.331887700Z",
+     "start_time": "2023-12-11T03:10:20.274957600Z"
+    }
+   },
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
@@ -270,7 +273,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[1;32mc:\\Users\\duanm\\Music\\GitHubProjects\\PyDevelopment\\setuptools_note\\setuptools_base\\atest\\t0.ipynb 单元格 5\u001B[0m line \u001B[0;36m1\n\u001B[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/duanm/Music/GitHubProjects/PyDevelopment/setuptools_note/setuptools_base/atest/t0.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001B[0m \u001B[39mfrom\u001B[39;00m \u001B[39mmypackage\u001B[39;00m\u001B[39m.\u001B[39;00m\u001B[39mmy1\u001B[39;00m\u001B[39m.\u001B[39;00m\u001B[39mcustom_ao\u001B[39;00m \u001B[39mimport\u001B[39;00m c_multi\n\u001B[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/duanm/Music/GitHubProjects/PyDevelopment/setuptools_note/setuptools_base/atest/t0.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001B[0m c_multi(\u001B[39m2\u001B[39m, \u001B[39m3\u001B[39m)\n",
+      "Cell \u001B[1;32mIn[16], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mmypackage\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmy1\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcustom_ao\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m c_multi  \u001B[38;5;66;03m# mypackage目录下的my1包未安装\u001B[39;00m\n\u001B[0;32m      3\u001B[0m c_multi(\u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m3\u001B[39m)\n",
       "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'mypackage.my1'"
      ]
     }
@@ -283,8 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T03:10:33.484354400Z",
+     "start_time": "2023-12-11T03:10:33.477178700Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -301,6 +309,18 @@
     "\n",
     "ph()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-12-11T03:10:20.291414700Z"
+    }
+   }
   }
  ],
  "metadata": {
