--- a/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/terms.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/terms.ipynb
@@ -41,8 +41,7 @@
     "GET test/_search\n",
     "`body`\n",
     "'''\n",
-    "es.search(index='test', body=body)\n",
-    "\n"
+    "es.search(index='test', body=body)"
    ],
    "metadata": {
     "collapsed": false,
