近义词的学习

--- a/操作分布式搜索和分析引擎Elasticsearch/索引/mapping_properties_参数analyzer_base.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/mapping_properties_参数analyzer_base.ipynb
@@ -27,6 +27,7 @@
    "source": [
     "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])\n",
     "body = {\n",
+    "    # Mapping is the process of defining how a document, and the fields it contains, are stored and indexed.\n",
     "    \"mappings\": {\n",
     "        \"properties\": {\n",
     "            \"information\": {\n",
