--- a/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/setting参数_自定义analyzer.ipynb
@@ -33,6 +33,7 @@
     "        \"analysis\": {\n",
     "            \"analyzer\": {\n",
     "                \"my_custom_analyzer\": {\n",
+    "                    # Setting type to custom tells Elasticsearch that we are defining a custom analyzer.\n",
     "                    \"type\": \"custom\",\n",
     "                    # A built-in or customised tokenizer. (Required)\n",
     "                    \"tokenizer\": \"ik_max_word\",\n",
